# career-copilot

./: .dockerignore  .env.backup.20251031_000616  .env.backup.20251031_001542  .env.development  .env.example  .env.overrides  .flake8  .gitignore  .local_services.pid  .markdownlint.json  .markdownlist.json  .pre-commit-config.yaml  .pre-commit-security.yaml  ACT.md  ACTUAL_STATUS.md  API_ENDPOINT_TEST_RESULTS.md  API_TEST_SUMMARY.md  APPLICATION_OVERVIEW.md  AUTHENTICATION_GUIDE.md  AUTHENTICATION_REMOVED.md  AUTHENTICATION_STATUS.md  CAREER_RESOURCES_CONVERSION.md  CHANGELOG.md  CLEANUP_REPORT.json  CODEBASE_CONSOLIDATION_REPORT.md  CONSOLIDATION_STATUS.md  CONTRIBUTING.md  DEDUPLICATION_OPERATIONS_GUIDE.md  DEDUPLICATION_QUICK_REFERENCE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  DOCKER_DEPLOYMENT.md  DOCKER_QUICKFIX.md  ENDPOINT_TEST_RESULTS.md  EU_OPTIMIZATIONS_COMPLETE.md  EU_OPTIMIZATION_FINAL_SUMMARY.md  EU_SCRAPER_OPTIMIZATIONS.md  FINAL_SUCCESS.md  FINAL_VALIDATION_REPORT.md  (+104 more)
backend/: .coveragerc  .env.backup.20251031_001602  .env.example  ANALYTICS_IMPORT_UPDATE_SUMMARY.md  API_ENDPOINTS_REPORT.md  BULK_OPERATIONS_IMPLEMENTATION_SUMMARY.md  BULK_OPERATIONS_QUICK_REFERENCE.md  DEPENDENCY_CONSOLIDATION_REPORT.md  Dockerfile  Dockerfile.prod  ENDPOINT_TESTING_FRAMEWORK_SUMMARY.md  ENHANCED_ANALYTICS_IMPLEMENTATION_SUMMARY.md  ENHANCED_ANALYTICS_QUICK_REFERENCE.md  GAP_ANALYSIS_IMPLEMENTATION_SUMMARY.md  NOTIFICATION_SYSTEM_IMPLEMENTATION.md  NOTIFICATION_SYSTEM_QUICK_REFERENCE.md  README.md  SEARCH_FILTERING_IMPLEMENTATION_SUMMARY.md  SEARCH_FILTERING_QUICK_REFERENCE.md  SINGLE_USER_MIGRATION_GUIDE.md  WEBSOCKET_IMPLEMENTATION_SUMMARY.md  alembic.ini  check_schema.py  conftest.py  convert_queries_to_async.py  convert_to_async.py  demo_endpoint_map.json  demo_test_results.html  demo_test_results.json  deploy.sh  docker-compose.prod.yml  fix_all_db_queries.py  fix_test_imports.py  generate_openapi.py  init.sql  nohup.out  pyproject.toml  pytest.ini  requirements.txt  reset_user.py  (+16 more)
backend/alembic/: env.py
backend/alembic/versions/: 001_add_search_performance_indexes.py  002_add_notification_tables.py  003_add_analytics_performance_indexes.py  004_add_calendar_tables.py  005_phase_3_3_fields.py  00c13b2e1e65_initial_migration.py  2a1db6753c88_initial_database_schema_with_users_jobs_.py  32b030e445af_sync_schema_with_models_add_missing_.py  3b2ef7854d99_add_goal_tracking_tables.py  3e72c1c42810_make_hashed_password_nullable.py  4af80d1f6e6a_add_help_articles_table.py  4c3ef8965e11_add_document_template_tables.py  5d4ef9876f22_add_compression_encryption_support.py  6b17ab364809_add_prefer_remote_jobs_to_user.py  79392a85c8a2_create_initial_schema.py  7eb1dbf5d90a_add_interview_practice_tables.py  86e771869702_add_daily_application_goal_to_user.py  a8a21a47e7a6_add_currency_to_job_model_and_rename_.py  add_document_content_field.py  add_profile_column_to_users.py  add_salary_fields.py  add_settings_json_column.py  add_user_job_preferences.py  ae995c518187_add_job_deduplication_index.py  b6ad015e0d17_add_oauth_fields_to_user.py  c5fd9b25cc88_add_content_versions_table.py  c8968749d89b_enhance_document_versioning_and_history.py  career_resources_001_add_career_resources_tables.py  cd924fcf1295_add_blueprint_performance_indexes.py  d5e03810354c_initial.py  d9f8e7c6b5a4_add_feedback_and_onboarding_tables.py  df4fbcbf8002_add_resume_parsing_models.py  e1f2a3b4c5d6_add_saved_searches_and_dashboard_layouts.py  e98860839e32_add_interview_feedback_to_application.py  env.py
backend/app/: celery.py  cli.py  dependencies.py  local_celery.py  main.py  main_job_tracker.py  main_simple.py  main_streamlined.py  scheduler.py
backend/app/agents/: __init__.py  base_agent.py  communication_agent.py  contract_analyzer_agent.py  legal_precedent_agent.py  negotiation_agent.py  orchestration_service.py  risk_assessment_agent.py
backend/app/api/: __init__.py  analytics.py  (+4 more)
backend/data/: career_copilot.db  career_copilot.db.backup
backend/docker/: entrypoint.sh
backend/maintenance/: check_analytics_files.py  config_manager.py  cost_efficiency_validator.py  database_health_monitor.py  database_optimization.py  init_database.py  initialize_config.py  initialize_database.py  initialize_services.py  initialize_vector_database.py  migrate_blueprint.py  migrate_config.py  performance_optimization_suite.py  reset_database.py  seed_data.py  seed_database.py  seed_precedents.py  seed_precedents_mock.py  setup_authentication.py  validate_configs.py
backend/migrations/: add_admin_field.py  add_feedback_tables.py  add_oauth_fields.py  env.py
backend/reports/: bandit_report.json  endpoint_map.json  endpoints_by_category.json
backend/scripts/: backfill_job_fingerprints.py  debug_auth.py  init_database.py  seed_data.py  setup_test_db.py  setup_test_db.sh  simple_cache_test.py  simple_db_init.py  test_caching.py  test_deduplication_e2e.py  test_email_notification.py  test_recommendations_caching.py  verify_indexes.py
backend/tests/: PHASE_2_COMPLETION_SUMMARY.md  PHASE_2_TEST_DETAILS.md  README.md  TESTING_GUIDE.md  TESTING_NOTES.md  conftest.py  manual_test_import.py  run_tests.sh  seed_test_data.py  setup_test_schema.py  test_advanced_user_analytics.py  test_analytics_skill_gaps.py  test_analytics_trends.py  test_angellist_integration.py  test_auth.py  test_auth_verification.py  test_bulk_operations.py  test_dependency_consistency.py  test_dependency_consolidation.py  test_endpoint_discovery.py  test_endpoint_tester.py  test_enhanced_analytics.py  test_eu_visa_sponsorship.py  test_export_functionality.py  test_export_service_unit.py  test_feedback_analysis.py  test_get_current_user_consistency.py.bak  test_import_functionality.py  test_market_analysis.py  test_notification_data_generation.py  test_notification_system.py  test_production_services.py  test_profile_endpoints.py  test_resume_routes.py  test_search_functionality.py  test_template_scoring_algorithms.py  test_test_data_generator.py  test_websocket_notifications.py  test_websocket_notifications_simple.py
(+2482 files in other folders)
