[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "career-copilot"
version = "1.0.0"
description = "AI-Powered Job Application Tracking and Career Management System"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Career Copilot Team", email = "team@career-copilot.com"}
]
maintainers = [
    {name = "Career Copilot Team", email = "team@career-copilot.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["career", "job-tracking", "ai", "machine-learning", "fastapi", "streamlit"]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "streamlit>=1.29.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.23",
    "openai>=1.6.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]
ai = [
    "openai>=1.6.0",
    "anthropic>=0.8.0",
    "langchain>=0.1.0",
    "chromadb>=0.4.18",
    "sentence-transformers>=2.2.2",
]
cloud = [
    "google-cloud-storage>=2.10.0",
    "google-cloud-firestore>=2.13.1",
    "redis>=5.0.1",
    "celery>=5.3.4",
]
monitoring = [
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
]
all = [
    "career-copilot[dev,ai,cloud,monitoring]"
]

[project.urls]
Homepage = "https://github.com/yourusername/career-copilot"
Documentation = "https://career-copilot.readthedocs.io"
Repository = "https://github.com/yourusername/career-copilot"
"Bug Tracker" = "https://github.com/yourusername/career-copilot/issues"
Changelog = "https://github.com/yourusername/career-copilot/blob/main/CHANGELOG.md"

[project.scripts]
career-copilot = "career_copilot.cli:main"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app", "career_copilot"]
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
exclude = [
    "migrations/",
    "tests/",
    ".venv/",
]

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "langchain.*",
    "openai.*",
    "anthropic.*",
    "streamlit.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
    "backend/tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["backend/app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
skips = ["B101", "B601"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    ".venv",
    "build",
    "dist",
]