[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "career-copilot"
version = "1.0.0"
description = "AI-Powered Job Application Tracking and Career Management System"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Career Copilot Team", email = "team@career-copilot.com"}
]
maintainers = [
    {name = "Career Copilot Team", email = "team@career-copilot.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["career", "job-tracking", "ai", "fastapi", "streamlit"]
dependencies = [
    # Core Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "gunicorn>=21.2.0",
    "python-multipart>=0.0.6",

    # Database and ORM
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9", # For PostgreSQL
    "aiosqlite>=0.19.0",     # For SQLite async
    "asyncpg>=0.29.0",        # For PostgreSQL async

    # Validation and Settings
    "pydantic[email]>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",

    # Authentication and Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.2",
    "cryptography>=41.0.7",
    "pyjwt>=2.8.0",

    # HTTP and API Clients
    "requests>=2.31.0",
    "httpx>=0.26.0",
    "urllib3>=2.1.0",

    # Utilities
    "python-dateutil>=2.8.2",
    "jinja2>=3.1.2",
    "aiofiles>=23.2.1",
    "email-validator>=2.1.0",
    "diskcache>=5.6.3",
    "firebase-admin>=6.4.0",
    "apscheduler>=3.10.4",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.1.0", # Replaces flake8, isort, bandit
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
    "types-requests",
    "types-pyyaml",
    "faker",
    "locust>=2.17.0",
]
ai = [
    "openai>=1.6.0",
    "anthropic>=0.8.0",
    "groq>=0.4.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "chromadb>=0.4.18",
    "sentence-transformers>=2.2.2",
    "pymupdf>=1.23.8", # For PDF processing in AI pipelines
    "tenacity>=8.2.3",
]
streamlit = [
    "streamlit>=1.31.0",
    "pandas>=2.1.4",
    "plotly>=5.18.0",
]
cloud = [
    "google-cloud-storage>=2.10.0",
    "google-cloud-firestore>=2.13.1",
    "google-cloud-logging>=3.8.0",
    "redis>=5.0.1",
    "celery>=5.3.4",
    "sendgrid>=6.10.0",
    "slack-sdk>=3.26.0",
]
monitoring = [
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.6",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
]
all = [
    "career-copilot[dev,ai,streamlit,cloud,monitoring]"
]

[project.urls]
Repository = "https://github.com/yourusername/career-copilot"

[project.scripts]
career-copilot = "backend.app.cli:main"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

# Flake8 Configuration
[tool.flake8]
max-line-length = 88
max-complexity = 10
ignore = [
    "E203",  # Whitespace before ':' (conflicts with black)
    "W503",  # Line break before binary operator (conflicts with black)
    "E501",  # Line too long (handled by black)
]
per-file-ignores = [
    "__init__.py:F401",  # Unused imports in __init__.py
    "tests/*:S101,S106",  # Allow assert statements and hardcoded passwords in tests
    "migrations/*:E501",  # Allow long lines in migrations
]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "C90", # mccabe complexity
    "I",   # isort
    "D",   # pydocstyle
    "B",   # flake8-bugbear
    "S",   # bandit security
]
docstring-convention = "google"
import-order-style = "google"

# Black Configuration
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

# Ruff Configuration
[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [
    "migrations",
    ".venv",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # bandit security
    "N",    # pep8-naming
    "D",    # pydocstyle
    "A",    # flake8-builtins
    "T20",  # flake8-print
    "C90",  # mccabe complexity
]
ignore = [
    "E501",  # Line too long (handled by black)
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
    "S101",  # Use of assert detected (allow in tests)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]
"tests/*" = ["S101", "S106", "D100", "D103"]
"migrations/*" = ["D100", "D103"]
"scripts/*" = ["T20"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["app", "career_copilot"]
force-single-line = false
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.lint.pydocstyle]
convention = "google"

# isort Configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["app", "career_copilot"]
known_third_party = [
    "fastapi",
    "pydantic",
    "sqlalchemy",
    "alembic",
    "openai",
    "anthropic",
    "streamlit",
    "pytest",
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_glob = ["migrations/*", ".venv/*"]

# MyPy Configuration
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_subclassing_any = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
show_column_numbers = true
exclude = [
    "migrations/",
    "tests/",
    ".venv/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "langchain.*",
    "openai.*",
    "anthropic.*",
    "groq.*",
    "streamlit.*",
    "plotly.*",
    "pandas.*",
    "firebase_admin.*",
    "google.*",
    "redis.*",
    "celery.*",
    "locust.*",
]
ignore_missing_imports = true

# Bandit Configuration
[tool.bandit]
exclude_dirs = ["tests", "migrations", ".venv"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection_process for tests

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]

[tool.pytest.ini_options]
pythonpath = ["."]
minversion = "7.0"
addopts = "-v --tb=short --strict-markers --color=yes"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: End-to-end tests",
    "performance: Performance tests",
    "security: Security tests",
]
norecursedirs = [".git", ".tox", "dist", "build", "*.egg", "venv", "__pycache__", "tests/performance"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "% (asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

