[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "career-copilot"
version = "1.0.0"
description = "AI-Powered Job Application Tracking and Career Management System"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Moatasim Farooque", email = "moatasimfarooque@gmail.com" }]
maintainers = [
    { name = "Moatasim Farooque", email = "moatasimfarooque@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["career", "job-tracking", "ai", "fastapi", "streamlit"]
dependencies = [
    # Core Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "gunicorn>=21.2.0",
    "python-multipart>=0.0.6",

    # Database and ORM
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9", # For PostgreSQL
    "aiosqlite>=0.19.0",      # For SQLite async
    "asyncpg>=0.29.0",        # For PostgreSQL async

    # Validation and Settings
    "pydantic[email]>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",

    # Authentication and Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.2",
    "cryptography>=41.0.7",
    "pyjwt>=2.8.0",

    # HTTP and API Clients
    "requests>=2.31.0",
    "httpx>=0.26.0",
    "urllib3>=2.1.0",

    # Utilities
    "python-dateutil>=2.8.2",
    "jinja2>=3.1.2",
    "aiofiles>=23.2.1",
    "aiohttp>=3.9.0",         # For HTTP client in health checks/scrapers
    "diskcache>=5.6.3",
    "firebase-admin>=6.4.0",
    "apscheduler>=3.10.4",
    "greenlet>=3.0.3",        # Required by SQLAlchemy asyncio (Python 3.12 support)
    "beautifulsoup4>=4.12.0", # For HTML parsing in scraping services
    "feedparser>=6.0.0",      # For RSS/Atom feed parsing in scraping
    "fake-useragent>=1.4.0",  # For rotating user agents in scrapers
    "openpyxl>=3.1.2",        # For Excel generation
    "PyPDF2>=3.0.1",
    "reportlab>=4.0.0",       # For PDF generation in exports

]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",
    "faker",
    "locust>=2.17.0",
]
ai = [
    "openai>=1.6.0",
    "anthropic>=0.8.0",
    "groq>=0.4.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "chromadb>=0.4.18",
    "sentence-transformers>=2.2.2",
    "pymupdf>=1.23.8",              # For PDF processing in AI pipelines
    "tenacity>=8.2.3",
]
streamlit = ["streamlit>=1.31.0", "pandas>=2.1.4", "plotly>=5.18.0"]
cloud = [
    "google-cloud-storage>=2.10.0",
    "google-cloud-firestore>=2.13.1",
    "google-cloud-logging>=3.8.0",
    "redis>=5.0.1",
    "celery>=5.3.4",
    "sendgrid>=6.10.0",
    "slack-sdk>=3.26.0",
]
monitoring = [
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.6",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
]
all = [
    # Aggregate of all optional feature dependencies (excludes dev tooling)
    # AI extras
    "openai>=1.6.0",
    "anthropic>=0.8.0",
    "groq>=0.4.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "chromadb>=0.4.18",
    "sentence-transformers>=2.2.2",
    "pymupdf>=1.23.8",
    "tenacity>=8.2.3",
    # Streamlit extras
    "streamlit>=1.31.0",
    "pandas>=2.1.4",
    "plotly>=5.18.0",
    # Cloud extras
    "google-cloud-storage>=2.10.0",
    "google-cloud-firestore>=2.13.1",
    "google-cloud-logging>=3.8.0",
    "redis>=5.0.1",
    "celery>=5.3.4",
    "sendgrid>=6.10.0",
    "slack-sdk>=3.26.0",
    # Monitoring extras
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.6",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
]

[project.urls]
Repository = "https://github.com/yourusername/career-copilot"

[project.scripts]
career-copilot = "backend.app.cli:main"

[tool.poetry]
package-mode = false

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --tb=short --strict-markers --color=yes"
testpaths = ["tests", "backend"]
python_files = ["test_*.py", "*_test.py"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: End-to-end tests",
    "performance: Performance tests",
    "security: Security tests",
]
norecursedirs = [
    ".git",
    ".tox",
    "dist",
    "build",
    "*.egg",
    "venv",
    "__pycache__",
    "tests/performance",
]
filterwarnings = ["error", "ignore::PendingDeprecationWarning"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "% (asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"


# ===================================================================
# Ruff - Python Linter and Formatter
# Main configuration is in ruff.toml at workspace root
# ===================================================================
[tool.ruff]
# Reference workspace configuration
# Full settings in: ruff.toml
line-length = 150
target-version = "py312"

# Define source directories
src = ["backend", "scripts", "tests"]

# Extend the default exclude list
extend-exclude = [
    "frontend",
    "data",
    "logs",
    "deployment",
    "monitoring",
    "secrets",
    "docs",
]

[tool.ruff.lint]
# Select rules - full list in ruff.toml
select = ["RUF"]
ignore = ["E501", "B905"]

[tool.ruff.lint.isort]
known-first-party = ["app", "backend", "scripts", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"


# ===================================================================
# Coverage.py configuration (migrated from backend/.coveragerc)
# ===================================================================
[tool.coverage.run]
source = ["backend/app"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
    "backend/app/main.py",
    "backend/app/dependencies.py",
    "*/conftest.py",
    "*/fixtures.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
title = "Contract Analyzer Unit Test Coverage"

[tool.coverage.xml]
output = "coverage.xml"
